--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
    
-
+    <meta name="facebook-domain-verification" content="eaezrpwi6vp0xlaccp1lvzzbwrpz95" />
+    
     <meta name="keywords" content="virtual assistant, remote work">
 
     <meta
